qnode00/templates/qnode01_app_dev_rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmqcluster-server-0
spec:
  type: ExternalName
  externalName: rabbitmq.rabbitmq.svc.cluster.local
  ports:
  - port: 5672
    protocol: TCP
