qnode00/templates/qnode01_app_dev_redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis-0
spec:
  type: ExternalName
  externalName: redis.redis.svc.cluster.local
  ports:
  - port: 6379
    protocol: TCP
