qnode00/templates/qnode01_app_dev_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnode0-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts: 
    - qnode0.dev.smartquail.io
    secretName: qnode0-tls
 # ingressClassName: nginx
  rules:
  - host: "qnode0.dev.smartquail.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: qnode0-dev-service
              port:
                number: 80
